--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
+body {
+    height: 100%;
+    padding: 0;
+    font-family: 'Source Sans Pro' !important;
+}
+
+* {
+    font-family: 'Source Sans Pro' !important;
+}
