change font sizes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,8 +15,8 @@
             <thead>
                 <tr>
                     <th>Category</th>
-                    <th>{{team1.name}} <span class="label-scoreboard uk-label label-team">Team A</span></th>
-                    <th>{{team2.name}} <span class="label-scoreboard uk-label-success uk-label label-team">Team B</span></th>
+                    <th>{{team1.name}}</th>
+                    <th>{{team2.name}}</th>
                 </tr>
             </thead>
             <tbody>
