--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,6 @@
 .main {
     margin-top: 2%;
+    margin-bottom: 5%;
 }
 
 .label-team {
@@ -8,6 +9,9 @@
 
 .score {
     font-size: 4.0rem;
+    input {
+        padding: 30px !important;
+    }
 }
 
 .category {
@@ -31,7 +35,7 @@
 
 .top {
     width: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     .uk-card {
         text-align: center;
@@ -42,7 +46,7 @@
 
 .footer {
     width: 100%;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     .uk-card {
         width: 100%;
@@ -58,4 +62,8 @@
     text-align: center;
     width: 50px;
     height: 50px;
+}
+
+th,  td {
+    font-size: 1.8rem;
 }
