add clear score option

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -64,8 +64,12 @@
                         <button class="option uk-button-primary uk-button" (click)="add5(1)">Add 5</button>
                     </div>
                     <div>
-                        <button class="option uk-button uk-button-danger" (click)="minus2(1)">Minus 2</button>
+                        <button class="option uk-button uk-button-secondary" (click)="minus2(1)">Minus 2</button>
                     </div>
+                    
+                </div>
+                <div>
+                    <button class="clear option uk-button uk-button-danger" (click)="clear(1)">Clear Score</button>
                 </div>
             </div>
         </div>
@@ -79,11 +83,14 @@
                 </h3>
                 <div class="uk-child-width-expand@s score-options" uk-grid>
                     <div>
-                        <button class="option uk-button-secondary uk-button" (click)="add5(2)">Add 5</button>
+                        <button class="option uk-button-primary uk-button" (click)="add5(2)">Add 5</button>
                     </div>
                     <div>
-                        <button class="option uk-button uk-button-danger" (click)="minus2(2)">Minus 2</button>
+                        <button class="option uk-button uk-button-secondary" (click)="minus2(2)">Minus 2</button>
                     </div>
+                </div>
+                <div>
+                    <button class="clear option uk-button uk-button-danger" (click)="clear(2)">Clear Score</button>
                 </div>
             </div>
         </div>
